tree_sitter_v/grammar.js
		source_file: ($) =>
			seq(
				optional($.shebang),
				optional($.module_clause),
				optional($.import_list),
				repeat(
					choice(
						seq($._top_level_declaration, optional(terminator)),
						seq($._statement, optional(terminator)),
					),
				),
			),

		line_comment: (_) => seq('//', /.*/),

		block_comment: (_) =>
			seq(
				'/*',
				repeat(
					choice(
						/\*/,
						regexOr(
							'[^*]', // any symbol except reserved
							'[/][^*]', // start of nested comment
							'[^*][/]', // end of nested comment
						),
					),
				),
				'*/',
			),

		module_clause: ($) => seq(optional($.attributes), 'module', $.identifier),

		_top_level_declaration: ($) =>
			choice(
				$.const_declaration,
				$.global_var_declaration,
				$.type_declaration,
				$.function_declaration,
				$.static_method_declaration,
				$.struct_declaration,
				$.enum_declaration,
				$.interface_declaration,
			),

		function_declaration: ($) =>
			prec.right(
				PREC.resolve,
				seq(
					optional(field('attributes', $.attributes)),
					optional($.visibility_modifiers),
					'fn',
					optional(field('receiver', $.receiver)),
					field('name', $._function_name),
					optional(field('generic_parameters', $.generic_parameters)),
					field('signature', $.signature),
					optional(field('body', $.block)),
				),
			),

		_function_name: ($) => choice($.identifier, $.overridable_operator),

		signature: ($) =>
			prec.right(
				seq(
					field('parameters', choice($.parameter_list, $.type_parameter_list)),
					optional(field('result', $.plain_type)),
				),
			),

		parameter_list: ($) => prec(PREC.resolve, seq('(', comma_sep($.parameter_declaration), ')')),

		parameter_declaration: ($) =>
			seq(
				optional(field('mutability', $.mutability_modifiers)),
				field('name', $.identifier),
				optional(field('variadic', '...')),
				field('type', $.plain_type),
			),

		generic_parameters: ($) =>
			prec(
				PREC.resolve,
				seq(
					choice(token.immediate('['), token.immediate('<')),
					comma_sep1($.generic_parameter),
					optional(','),
					choice(']', '>'),
				),
			),

		generic_parameter: ($) => $.identifier,

		struct_declaration: ($) =>
			seq(
				optional(field('attributes', $.attributes)),
				optional($.visibility_modifiers),
				choice('struct', 'union'),
				field('name', $.identifier),
				optional(field('generic_parameters', $.generic_parameters)),
				$._struct_body,
			),

		_struct_body: ($) =>
			seq(
				'{',
				repeat(
					choice(
						seq($.struct_field_scope, optional(terminator)),
						seq($.struct_field_declaration, optional(terminator)),
					),
				),
				'}',
			),

		// pub:
		// mut:
		// pub mut:
		// __global:
		struct_field_scope: () => seq(choice('pub', 'mut', seq('pub', 'mut'), '__global'), ':'),

		struct_field_declaration: ($) => choice($._struct_field_definition, $.embedded_definition),

		_struct_field_definition: ($) =>
			prec.right(
				PREC.type_initializer,
				seq(
					field('name', $.identifier),
					field('type', $.plain_type),
					optional(seq('=', field('default_value', $._expression))),
					optional(field('attributes', $.attribute)),
				),
			),

		_expression: ($) => choice($._expression_without_blocks, $._expression_with_blocks),

		inc_expression: ($) => seq($._expression, '++'),

		anon_struct_value_expression: ($) =>
			seq(
				'struct',
				'{',
				choice(
					field('element_list', $.element_list),
					// For short struct init syntax
					field('short_element_list', $.short_element_list),
				),
				'}',
			),

		call_expression: ($) =>
			prec.right(
				PREC.primary,
				choice(
					seq(field('function', token('json.decode')), field('arguments', $.special_argument_list)),
					seq(
						field('name', $._expression),
						optional(field('type_parameters', $.type_parameters)),
						field('arguments', $.argument_list),
					),
				),
			),

		argument_list: ($) =>
			seq('(', choice(repeat(seq($.argument, optional(list_separator))), $.short_lambda), ')'),

		argument: ($) =>
			choice($._expression, $.mutable_expression, $.keyed_element, $.spread_expression),

		element_list: ($) =>
			repeat1(
				seq(
					choice($.spread_expression, $.keyed_element, $.reference_expression),
					optional(list_separator),
				),
			),

		short_element_list: ($) =>
			repeat1(seq(alias($._expression, $.element), optional(list_separator))),

		keyed_element: ($) =>
			seq(
				field('key', alias($.reference_expression, $.field_name)),
				':',
				field('value', $._expression),
			),

		reference_expression: ($) => prec.left($.identifier),
		type_reference_expression: ($) => prec.left($.identifier),

		binary_expression: ($) => {
			const table = [
				[PREC.multiplicative, choice(...multiplicative_operators)],
				[PREC.additive, choice(...additive_operators)],
				[PREC.comparative, choice(...comparative_operators)],
				[PREC.and, '&&'],
				[PREC.or, '||'],
			];

			return choice(
				...table.map(([precedence, operator]) =>
					prec.left(
						Number(precedence),
						seq(
							field('left', $._expression),
							// @ts-ignore
							field('operator', operator),
							field('right', $._expression),
						),
					),
				),
			);
		},

		literal: ($) =>
			choice(
				$.int_literal,
				$.float_literal,
				$._string_literal,
				$.rune_literal,
				$.none,
				$.true,
				$.false,
				$.nil,
			),

		selector_expression: ($) =>
			prec.dynamic(
				-1,
				prec(
					PREC.primary,
					seq(
						field('operand', $._expression),
						choice('.', '?.'),
						field('field', choice($.reference_expression, $.compile_time_selector_expression)),
					),
				),
			),

		is_expression: ($) =>
			prec.dynamic(
				2,
				seq(
					field('left', seq(optional($.mutability_modifiers), $._expression)),
					choice('is', '!is'),
					field('right', $.plain_type),
				),
			),

		enum_fetch: ($) => prec.dynamic(-1, seq('.', $.reference_expression)),

		int_literal: () => token(int_literal),

		_string_literal: ($) =>
			choice($.interpreted_string_literal, $.c_string_literal, $.raw_string_literal),

		interpreted_string_literal: ($) =>
			prec(
				1,
				choice(
					seq(
						"'",
						repeat(
							choice(
								token.immediate(prec.right(1, /[^'\\$]+/)),
								$.escape_sequence,
								$.string_interpolation,
							),
						),
						"'",
					),
					seq(
						'"',
						repeat(
							choice(
								token.immediate(prec.right(1, /[^"\\$]+/)),
								$.escape_sequence,
								$.string_interpolation,
							),
						),
						'"',
					),
				),
			),

		identifier: () =>
			token(
				seq(
					optional('@'),
					optional('$'),
					optional('C.'),
					optional('JS.'),
					choice(unicode_letter, '_'),
					repeat(choice(letter, unicode_digit)),
				),
			),

		visibility_modifiers: () => prec.left(choice('pub', '__global')),

		mutability_modifiers: () =>
			prec.left(
				PREC.resolve,
				choice(seq('mut', optional('static'), optional('volatile')), 'shared'),
			),

		expression_list: ($) =>
			prec(PREC.resolve, comma_sep1(choice($._expression, $.mutable_expression))),

		plain_type: ($) =>
			prec.right(
				PREC.primary,
				choice($._plain_type_without_special, $.option_type, $.result_type, $.multi_return_type),
			),

		_plain_type_without_special: ($) =>
			prec.right(
				PREC.primary,
				choice(
					$.type_reference_expression,
					$.qualified_type,
					$.pointer_type,
					$.wrong_pointer_type,
					$.array_type,
					$.fixed_array_type,
					$.function_type,
					$.generic_type,
					$.map_type,
					$.channel_type,
					$.shared_type,
					$.thread_type,
					$.atomic_type,
					$.anon_struct_type,
				),
			),

		anon_struct_type: ($) => seq('struct', $._struct_body),

		multi_return_type: ($) => seq('(', comma_sep1($.plain_type), optional(','), ')'),

		result_type: ($) => prec.right(seq('!', optional($.plain_type))),

		option_type: ($) => prec.right(seq('?', optional($.plain_type))),

		array_type: ($) =>
			prec(PREC.primary, prec.dynamic(2, seq('[', ']', field('element', $.plain_type)))),

		_statement_list: ($) =>
			choice(
				seq(
					$._statement,
					repeat(seq(terminator, $._statement)),
					optional(
						seq(terminator, optional(alias($.empty_labeled_statement, $.labeled_statement))),
					),
				),
				alias($.empty_labeled_statement, $.labeled_statement),
			),

		_statement: ($) =>
			choice(
				$.simple_statement,
				$.assert_statement,
				$.continue_statement,
				$.break_statement,
				$.return_statement,
				$.asm_statement,
				$.goto_statement,
				$.labeled_statement,
				$.defer_statement,
				$.for_statement,
				$.compile_time_for_statement,
				$.send_statement,
				$.block,
				$.hash_statement,
				$.append_statement,
			),

		simple_statement: ($) =>
			choice(
				$.var_declaration,
				$._expression,
				$.assignment_statement,
				alias($.strictly_expression_list, $.expression_list),
			),

		var_declaration: ($) =>
			prec.right(
				seq(
					field('var_list', $.expression_list),
					':=',
					field('expression_list', $.expression_list),
				),
			),

		var_definition_list: ($) => comma_sep1($.var_definition),

		var_definition: ($) =>
			prec(
				PREC.type_initializer,
				seq(optional(field('modifiers', 'mut')), field('name', $.identifier)),
			),

		block: ($) => seq('{', optional($._statement_list), '}'),

		compile_time_for_statement: ($) => seq('$for', $.range_clause, field('body', $.block)),

		for_statement: ($) =>
			seq(
				'for',
				optional(choice($.range_clause, $.for_clause, $.is_clause, $._expression)),
				field('body', $.block),
			),

		is_clause: ($) =>
			prec(PREC.primary, seq(optional(alias('mut', $.mutability_modifiers)), $.is_expression)),

		range_clause: ($) =>
			prec.left(
				PREC.primary,
				seq(
					field('left', $.var_definition_list),
					'in',
					field('right', choice(alias($._definite_range, $.range), $._expression)),
				),
			),

		for_clause: ($) =>
			prec.left(
				seq(
					optional(field('initializer', $.simple_statement)),
					';',
					optional(field('condition', $._expression)),
					';',
					optional(field('update', $.simple_statement)),
				),
			),

		_definite_range: ($) =>
			prec(
				PREC.multiplicative,
				seq(
					field('start', $._expression),
					field('operator', choice('..', '...')),
					field('end', $._expression),
				),
			),

		range: ($) =>
			prec(
				PREC.multiplicative,
				seq(
					optional(field('start', $._expression)),
					field('operator', '..'),
					optional(field('end', $._expression)),
				),
			),

		attributes: ($) => repeat1(seq($.attribute, optional(terminator))),

		attribute: ($) =>
			seq(
				choice('[', '@['),
				seq($.attribute_expression, repeat(seq(';', $.attribute_expression))),
				']',
			),

		attribute_expression: ($) => prec(PREC.attributes, choice($.if_attribute, $._plain_attribute)),

		// [if some ?]
		// @[if some ?]
		_plain_attribute: ($) => choice($.literal_attribute, $.value_attribute, $.key_value_attribute),

		// ['/query']
		// @['/query']
		value_attribute: ($) =>
			prec(
				PREC.attributes,
				field('name', choice(alias('unsafe', $.reference_expression), $.reference_expression)),
			),

		// [key]
		// [key: value]
		// @[key]
		// @[key: value]
